# marcel-evaluation

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
example/: config.json  metrics.json  metrics.raw.json  metrics_by_sample.json  output.json
src/marcel_evaluation/: __init__.py  base.py  llm.py  runner.py  utils.py
src/marcel_evaluation/metrics/: __init__.py  answer_faithfulness.py  answer_relevance.py  answer_relevance_qgen.py  answer_similarity.py  claim_splitter.py  claim_verifier.py  classic.py  context_precision.py  context_precision_prompt.py  context_recall.py  context_recall_prompt.py  non_answer_critic.py  non_answer_critic_prompt.py
tests/: conftest.py  test_base.py  test_llm.py  test_runner.py  test_utils.py
tests/metrics/: test_answer_faithfulness.py  test_answer_relevance.py  test_answer_similarity.py  test_claim_splitter.py  test_claim_verifier.py  test_classic.py  test_context_precision.py  test_context_recall.py  test_non_answer_critic.py
